test/compile_failure/22_duplicate_struct_member.c
// EXPECT-ERRORS: 1
// EXPECT: duplicate struct member 'value'
struct Pair {
    int value;
    int value;
};
